# Test01

./: .gitignore  .gitignore.swp  TODO  readme.md
cpp/masynclogger/: Application.cpp  AsyncLogger.cpp  AsyncLogger.h  IdGen.cpp  MyTest02.vcxproj  MyTest02.vcxproj.filters  ThreadPool.cpp  WorkerThread.cpp  tags
cpp/pjt01/: .gitignore  CMakeLists.txt  TEST01.sln  TEST01.vcxproj.filters  a.cpp  b.cpp  build_cscope.sh  makefile3  makefile_linux.mk.old  minheap.cpp  todo.md
cpp/pjt01/algo/: .session.vim  .view.vim  CMakeLists.txt
cpp/pjt01/algo/src/: copcar.cpp  dij.cpp
cpp/pjt01/include/: mu.h
cpp/pjt01/src/abc/: b.cpp  test01.cpp
cpp/pjt01/src/mutil/: mbtree.cpp  mtype.c  mu.c
cpp/pjt01/src/net/: c.cpp  s.cpp  tc.cpp  u.cpp  uc.cpp  udp_server.c
cpp/pjt01/src/plot/: gnuplot_ex.cpp  pGNUPlot.cpp
cpp/pjt02/: a1  a2  a2.cpp  a4.cpp  aa.cpp  al01.cpp  c2.c  example_dll.cpp  example_dll.h  gen3.bat  makefile_simple  mf01.mf  mutil.cpp  mutil.hpp  pjt02.sln  pjt02.vcxproj  pjt02.vcxproj.filters  rpi01  t_hash.cpp  test.py  test_sht20.py
cpp/pjt02/hash/: hash.hpp
cpp/pjt02/thread/: makefile
cpp/pjt02/trie/: Enable1.txt
cpp/pjt04/: makefile
cpp/pjt05/: .vimspector.json  project.env  project_template.env
cpp/pjt05/a/: CMakeLists.txt  a.cpp  aa.c  main.cpp  t.cpp
cpp/pjt05/ads/: ads1115.cpp
cpp/pjt05/algo/: .ycm_pjt_conf.py  abc.c
java/batch-demo/: .pjt.vim
java/exampleBatch/: .pjt.vim
java/mybatch/: .gitignore  .vimspector.json  Session.vim  readme.md
jpjt01/: Main.java  build.gradle
jpjt01/aa/: .gitignore  settings.gradle
jpjt01/batch-demo/: build.gradle
jpjt01/exampleBatch/: build.gradle  coc-settings.json
jpjt01/mybatch/: .gitignore  .pjt.vim  _pom.xml  build.gradle  pom.xml
jpjt01/qsl_m_ds/: build.gradle  settings.gradle
lua/abc/: main.lua
masynclogger/: Application.cpp  AsyncLogger.cpp  LogDetailMsg.h  LogRecord.h  ThreadMsg.h  UserData.h  UserData.hpp  WorkerThread.cpp  WorkerThread.h  WorkerThread.hpp  makefile
pjt01/: .cproject  .gitignore  .l.cpp.un~  .makefile.un~  .project  .s.cpp.un~  .sender.cpp.un~  .t.cpp.un~  .uc.cpp.un~  .ycm_c_pjt_conf.py  .ycm_extra_conf.py  .ycm_pjt_conf.py  CMake -G.launch  CMakeCache.txt  CMakeLists.txt  M_Linkedlist.h  Makefile  MyTestCode.cpp  TEST01.sln  TEST01.vcxproj  TEST01.vcxproj.filters  T_LinkedList.cpp  T_LinkedList.hpp  a.c  a.cpp  aa.c  algo01.cpp  app.c  b.cpp  b_mpi.cpp  bb.cpp  build.bat  build_install.bat  c.cpp  code.c  copcar.cpp  gnuplot_i.c  gnuplot_i.h  input.txt  install_manifest.txt  (+54 more)
pjt01/TS2/: ts2.ii  ts2.s
pjt01/algo/: CMakeLists.txt
pjt01/algo/src/: dij.cpp
pjt01/inc/: T_LinkedList.cpp  T_LinkedList.hpp  aa.hpp  mbtree.hpp  mipc.hpp  test01.hpp  u.hpp  uu1.hpp
pjt01/include/: T_LinkedList.hpp  gnuplot_i.hpp  u.hpp  uu1.hpp
pjt01/src/abc/: CMakeLists.txt  _coc.vim  _func.vim  _keymap.vim  a.c  a.cpp  aa.c  aa.hpp  app.c  b.cpp  b_mpi.cpp  bb.cpp  helloworld.cpp  sm.cpp  t.cpp  tetris.cpp  tt01.cpp  tt02.cpp  u1.cpp  ul.c  uu1.cpp
pjt01/src/algo/: CMakeLists.txt  algo01.cpp  copcar.cpp  malogo.hpp
pjt01/src/mutil/: CMakeLists.txt  M_Linkedlist.c  MyTestCode.cpp  mipc.cpp  ml.c  mtype.c  mu.c  sm_c.cpp  sm_p.cpp
pjt01/src/net/: c.cpp  listener.cpp  s2.cpp  t1.cpp  u.cpp  udp_client.c  udp_echo_client.cpp  udp_echo_server.cpp  udp_server.c
pjt01/src/plot/: CMakeLists.txt  gnuplot_ex.cpp  gnuplot_i.c  gnuplot_i.h  ncs_test.c  pGNUPlot.cpp  test_gnuplot.cpp
pjt01/src/wx_sample/: dataview.cpp  mymodels.cpp  null.xpm  wx_small.xpm
pjt01/x64/ts/: TEST01.ilk  vc141.idb
pjt01/x64/ts/TEST01.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TEST01.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
pjt02/: .gitignore  .ycm_extra_conf.py  ObjectHashTable.cpp  README.md  a1.cpp  a2.cpp  a3.cpp  a4.cpp  a5.cpp  a6.cpp  a7.cpp  aa  aa.cpp  aa1.cpp  aaa.cpp  al01.cpp  algo.cpp  am2302.c  b.cpp  c1.c  c1.cpp  c3.c  cc.cpp  csvparser.cpp  ctest.c  dht22temp  dht22temp.c  example_dll.cpp  example_main.cpp  gen.bat  gen2.bat  hello.cpp  input.csv  input2.txt  input3.txt  makefile  makefile.rpi  mf01.mf  mtest.hpp  mtest01.hpp  (+16 more)
pjt02/hash/: hash.cpp  t_hash.cpp
pjt02/thread/: t_cond_var.cpp
pjt02/trie/: main.cpp  trie.cpp  trie.h
pjt03/: README.md  c.py  httpserver02.py  sht20.py  th01.py  threadex1.py
pjt04/: makefile  testLib.cpp  testLib.h  testMain.cpp  testVir.h
pjt05/: .gitignore  CMakeLists.txt  CMakeLists_.txt  CMakeLists_lib.txt  HTU21D_test.c  Makefile  ThreadPool.cpp  _pjt.vim  _sht21.c  a.cpp  b  b.c  debug]  i2cex.c  main.c  main.cpp  main.sln  makefile  my.cpp  my.hpp  pool.c  project.env  release]  sht21.c  sht2x.c  t.cpp  test_main.cpp  test_main.vcxproj  test_main.vcxproj.filters  wire.cpp
pjt05/a/: CMakeLists.txt  a.cpp  aa.c  main.c  t.cpp
pjt05/algo/: CMakeLists.txt  dijstra.cpp
pjt05/include/: ThreadPool.hpp  list.h  my.hpp  pool.h
pjt05/my/: CMakeLists.txt  ThreadPool.cpp  my.cpp  my.vcxproj  my.vcxproj.filters  pool.c
pjt05/sht25/: CMakeLists.txt  myi2c.c  myi2c.h  sht2x.h  wire.h
pjt05/template/: CMakeLists2.txt  makefile2
pjt05/test/: CMakeLists.txt  test_main.cpp
pjt05/uart/: uart.c
ppjt01/: run1.py  run_textsnets.py
python/pjt03/: a.py  aa.dem  aa.txt  b.py  c.py  c1.py  gen_person_json.py  test.txt  zmq_pub.py  zmq_sub.py
python/ppjt01/: run_textsnets.py
rpjt2/: .gitignore  Cargo.toml
rpjt2/src/: .main.rs.swp  main.rs
rust/abc/: Cargo.toml  rust-toolchain.toml
rust/abc/src/: lib.rs  (+1 more)
rust/rfr_egui/: Cargo.toml  README.md  package-lock.json
rust/rfr_egui/src/: main.rs
rust/rpjt2/: Cargo.toml
todo-svelte/src/: App.svelte  barcharts.svelte  clock.svelte
tools/: .readme.txt.un~  Vundle-Install.txt  _vimrc  readme.txt
vpjt01/: package-lock.json
vpjt01/test/: package-lock.json  package.json
vpjt01/vue-project/: .eslintrc.cjs  package-lock.json
web/wwpjt02/: package-lock.json
wwpjt01/app/: index.html
wwpjt01/src/: index.html  main.js
wxpj01/: .HelloWorldApp.cpp.un~  .HelloWorldApp.h.un~  .makefile.un~  HelloWorldApp.cpp  HelloWorldApp.h  makefile  makefile~
(+145 files in other folders)
